--- a/sub01_01.html
+++ b/sub01_01.html
@@ -14,7 +14,7 @@
     
 
     <header class="on">
-        <h1><a href="index.html"><img src="images/logo22222_03.png" alt=""></a></h1>
+        <h1><a href="index.html"><img src="images/logo_main.png" alt=""></a></h1>
 
         <nav>
             <ul class="gnb">
